Fix visibility titles in HNB

--- a/src/ggrc/assets/stylesheets/layout/_no-js.scss
+++ b/src/ggrc/assets/stylesheets/layout/_no-js.scss
@@ -17,7 +17,8 @@
 
   #lhn,
   .header,
-  .area {
+  .header-content,
+  .footer {
     display: none;
   }
 }
